<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/HeaderView"
        android:layout_width="match_parent"
        android:weightSum="4"
        android:paddingTop="@dimen/_3sdp"
        android:paddingBottom="@dimen/_3sdp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvyear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="start"
            android:textColor="@color/black"
            android:layout_marginLeft="@dimen/_10sdp"
            android:gravity="center|start"
            android:text="123"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:id="@+id/tvmonth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="right"
            android:textColor="@color/font2"
            android:layout_marginRight="@dimen/_10sdp"
            android:gravity="center|right"
            android:text="456"
            android:textSize="@dimen/_14sdp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/label_days"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/HeaderView"
        android:background="?android:colorBackground"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/_3sdp"
        android:paddingTop="@dimen/_3sdp">

        <TextView
            android:layout_width="@dimen/_45sdp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/sunday"
            android:textAllCaps="true" />

        <TextView
            android:layout_width="@dimen/_45sdp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/monday"
            android:textAllCaps="true" />

        <TextView
            android:layout_width="@dimen/_45sdp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/tuesday"
            android:textAllCaps="true" />

        <TextView
            android:layout_width="@dimen/_45sdp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/wednesday"
            android:textAllCaps="true" />

        <TextView
            android:layout_width="@dimen/_45sdp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/thursday"
            android:textAllCaps="true" />

        <TextView
            android:layout_width="@dimen/_45sdp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/friday"
            android:textAllCaps="true" />

        <TextView
            android:layout_width="@dimen/_45sdp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/saturday"
            android:textAllCaps="true" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rl_calendar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/label_days" />

</RelativeLayout>